tests/ui/traits/new-solver/pointer-like.stderr
error[E0277]: `u16` needs to have the same alignment and size as a pointer
  --> $DIR/pointer-like.rs:11:14
   |
LL |     require_(1u16);
   |     -------- ^^^^ the trait `PointerLike` is not implemented for `u16`
   |     |
   |     required by a bound introduced by this call
   |
   = note: the trait bound `u16: PointerLike` is not satisfied
note: required by a bound in `require_`
  --> $DIR/pointer-like.rs:7:21
   |
LL | fn require_(_: impl PointerLike) {}
   |                     ^^^^^^^^^^^ required by this bound in `require_`
help: consider borrowing here
   |
LL |     require_(&1u16);
   |              +
LL |     require_(&mut 1u16);
   |              ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
